err/gotocorepy.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/core'...
Listing './lib/python3.5/site-packages/core/base'...
Compiling './lib/python3.5/site-packages/core/base/corebaseclassfactory.py'...
***   File "./lib/python3.5/site-packages/core/base/corebaseclassfactory.py", line 56
    print _instance.callbacks
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/core/base/corecallback.py'...
***   File "./lib/python3.5/site-packages/core/base/corecallback.py", line 21
    print "send callback:", service
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/core/context'...
Listing './lib/python3.5/site-packages/core/filesystem'...
Compiling './lib/python3.5/site-packages/core/filesystem/corefilesystem.py'...
***   File "./lib/python3.5/site-packages/core/filesystem/corefilesystem.py", line 77
    print error
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/core/logger'...
Listing './lib/python3.5/site-packages/core/logger/base'...
Compiling './lib/python3.5/site-packages/core/logger/coreloggerdebug.py'...
***   File "./lib/python3.5/site-packages/core/logger/coreloggerdebug.py", line 6
    print self.createEntryFrom(message)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/core/logger/coreloggerfile.py'...
***   File "./lib/python3.5/site-packages/core/logger/coreloggerfile.py", line 25
    print "unit:"+size_unit
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/core/logger/coreloggermongo.py'...
***   File "./lib/python3.5/site-packages/core/logger/coreloggermongo.py", line 17
    print error
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/core/notification'...
Listing './lib/python3.5/site-packages/core/python'...
Compiling './lib/python3.5/site-packages/core/python/coredaemon.py'...
***   File "./lib/python3.5/site-packages/core/python/coredaemon.py", line 32
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/core/service'...
Listing './lib/python3.5/site-packages/core/utils'...
Listing './lib/python3.5/site-packages/gotocorepy-0.0.6.egg-info'...
Listing './lib/python3.5/site-packages/hurry'...
Listing './lib/python3.5/site-packages/hurry/filesize'...
Listing './lib/python3.5/site-packages/hurry.filesize-0.9.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
